fix logo alignment

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -27,7 +27,7 @@ a.title {
 }
 
 .logo {
-    height: 1.3rem !important;
+    height: 1.2rem !important;
     padding: 0.89rem 0 !important;
 }
 .footer-wrapper {
